public/style.css
.title
{
    color: white;
    margin: 0 auto;
    width: 100%;
    height: 150px;
    padding-top: 50px;
    background-color: rgb(180, 54, 54);
    font-family: Roboto, Helvetica, sans-serif;
    font-weight: 500;
    font-size: 75px;
    text-align: center;

}

.message
{
    color: white;
    margin: 0 auto;
    font-family: Roboto, Helvetica, sans-serif;
    font-weight: 500;
    font-size: 40px;
    text-align: center;
    background-color: lightgray;
    padding-left: 10px;
    padding-bottom: 20px; 
    padding-top: 20px;
}

a 
{
    font: 15px Roboto, Helvetica, sans-serif;
    text-decoration: none;
    color: #000000;
}

a:hover
{
    cursor: pointer;
    color: #8f8c8a;
}



.newGame
{
    text-align: center;
    display: block;
    margin: 0 auto;
    margin-top: 30px;
    width: 250px;
    padding: 20px;
    border: solid;
    border-radius: 5px;
    border-width: 3px;
    border-color: darkgrey;
    background-color: lightgrey;

    color: white;
    font-family: Roboto, Helvetica, sans-serif;
    font-weight: 400;
    font-size: 30px;
    text-align: center;
}

.body
{
    font-family: Roboto, Helvetica, sans-serif;
    color: white;
    min-width: 800px;
}

.gameBoard 
{
    margin: 40px auto 0;
    width: 500px;
    height: 375px;
}

.gameBoard button
{
    width: 50px;
    height: 50px;
    border-radius: 50%;
    border: 3px solid darkgray;
    background: lightgrey;
}

button.red {
    background: rgb(136, 0, 0);
    border-color: darkred;
}
  
button.black {
    background: rgb(17, 17, 17);
    border-color: rgb(0, 0, 0);
}

.divider
{
    margin: 40px auto 0;
    background-color: darkgray;
    width: 90%;
    height: 4px;
    border-radius: 4px;
}

.scoreBoard
{
    color: white;
    margin: 40px auto 0;
    width: 400px;
    height: 600px;
    border: 3px solid darkgray;
    border-radius: 15px;
    background-color: lightgrey;
}

.scoreboardTitle
{
    padding-top: 30px;
    text-align: center;
    margin-top: -5px;
    font-weight: 600; 
    font-family: Roboto, Helvetica, sans-serif;
}

.boardsec
{
    display: inline-flex;
    font-weight: 400;
    font-family: Roboto, Helvetica, sans-serif;
}

.headers 
{
    display: inline;
}

.info
{
    width: 200px;
    display: inline-flex;
}

.item1
{
    float: left;
    padding-left: 50px;
    font-size: 20px;
    font-style: italic;
}

.item2
{
    float: right;
    padding-left: 210px;
    font-size: 20px;
    font-style: italic;
}

.playerTitle
{
    float: left;
    padding-left: 50px;
    
}

.wins
{
    float: right;
    padding-right: 50px;
}

.playername
{
    padding-left: 50px;
}

.score
{
    float: right;
    padding-right: 50px;
}

.errtag 
{
    font-family: 400 50px Roboto, Helvetica, sans-serif;
    text-align: center;
}

.errtext
{
    font-family: Roboto, Helvetica, sans-serif;
    text-align: center;
}

